add docs & example renders, update deps, minor updates core ns